[tool.poetry]
name = "maubot-weather"
version = "1.0.0"
description = ""
authors = ["Rhys Tyers <rhystyers1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyppeteer = "^1.0.2"
maubot = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
